slides-listings.yaml initiated

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -115,8 +115,8 @@ website:
 format:
   html:
     theme:
-      light: [cosmo, theme.scss]
-      dark: [cosmo, theme-dark.scss]
+      light: [slate, theme.scss]
+      dark: [slate, theme-dark.scss]
     mainfont: "Atkinson Hyperlegible"
     code-copy: true
     code-overflow: wrap
