--- a/slides-listings.yaml
+++ b/slides-listings.yaml
@@ -1,65 +1,65 @@
-- title: "Introduction aux Grosses Données"
+- title: "Introduction to Big Data"
   author: "Master MIDS/MFA/LOGOS UParis Cité"
   date: "2025-09-13"
-  path: "core/slides/BD_intro.html"
+  path: "core/slides/slides01_introduction.html"
   categories: []
 - title: "Python data stack : Numpy et Scipy"
   author: "Master MIDS/MFA/LOGOS UParis Cité"
   date: "2025-09-13"
-  path: "core/slides/SQL_0.html"
+  path: "core/slides/slides02_python_ds_stack.html"
   categories: []
 - title: "Python data stack : Pandas "
   author: "Master MIDS/MFA/LOGOS UParis Cité"
   date: "2025-09-20"
-  path: "core/slides/SQL_1.html"
+  path: "core/slides/slides02_python_ds_stack.html"
   categories: []
 - title: "Python data stack : Dask"
   author: "Master MIDS/MFA/LOGOS UParis Cité"
   date: "2025-09-27"
-  path: "core/slides/SQL_2.html"
+  path: "core/slides/slides09_dask.html"
   categories: []
-- title: "SQL : Agrégations, Paritions, Fenêtres"
+- title: "Spark : RDDs"
   author: "Master MIDS/MFA/LOGOS UParis Cité"
   date: "2025-10-04"
-  path: "core/slides/SQL_3.html"
+  path: "core/slides/slides03_sparkrdd.html"
   categories: []
-- title: "SQL : Définition de données"
+- title: "Spark : SQL"
   author: "Master MIDS/MFA/LOGOS UParis Cité"
   date: "2025-10-11"
-  path: "core/slides/LDD_0.html"
+  path: "core/slides/slides04_sparkl.html"
   categories: []
-- title: "SQL : Définition de données, Contraintes simples"
+- title: "JSON"
   author: "Master MIDS/MFA/LOGOS UParis Cité"
   date: "2025-10-18"
-  path: "core/slides/LDD_1.html"
+  path: "core/slides/slides05_json-format.html"
   categories: []
-- title: "SQL : Définition de données, Contraintes d'exclusion"
+- title: "File formats for Big Data"
   author: "Master MIDS/MFA/LOGOS UParis Cité"
   date: "2025-10-25"
-  path: "core/slides/LDD_2.html"
+  path: "core/slides/slides06_file-formats.html"
   categories: []
-- title: "Modélisation : Entité-Association"
+- title: "Spark: a deeper dive"
   author: "Master MIDS/MFA/LOGOS UParis Cité"
   date: "2025-11-08"
-  path: "core/slides/Modelisation_1.html"
+  path: "core/slides/slides07_spark-deeper-dive.html"
   categories: []
-- title: "Modélisation : Pattes de corbeaux"
+- title: "Spark: tips"
   author: "Master MIDS/MFA/LOGOS UParis Cité"
   date: "2025-11-15"
-  path: "core/slides/Modelisation_2.html"
+  path: "core/slides/slides08_spark-tips.html"
   categories: []
-- title: "Normalisation : Dépendances fonctionnelles, Fermetures"
+- title: "Spark: Applications"
   author: "Master MIDS/MFA/LOGOS UParis Cité"
   date: "2025-11-22"
-  path: "core/slides/DF_norm_1.html"
+  path: "core/slides/spark-nlp.html"
   categories: []
-- title: "Normalisation: FNBC, Décomposition SPI, Poursuite"
+- title: "Spark: Applications"
   author: "Master MIDS/MFA/LOGOS UParis Cité"
   date: "2025-11-29"
-  path: "core/slides/DF_norm_1.html"
+  path: "core/slides/spark-geo.html"
   categories: []
-- title: "Normalisation: FN3, Décomposition SPI et sans perte de DF"
+- title: "Pandas on Spark and sparklyr"
   author: "Master MIDS/MFA/LOGOS UParis Cité"
   date: "2025-12-06"
-  path: "core/slides/DF_norm_3.html"
+  path: "core/slides/spark-pandas-on-spark.html"
   categories: []
