Pimping top level files 	modified:   _objectives_ifeby310.qmd 	modified:   _quarto.yml 	new file:   computing-access.qmd 	new file:   computing-docker.qmd 	new file:   computing-pipelines.qmd 	new file:   computing-psql.qmd 	modified:   cours-syllabus.qmd 	new file:   course-team.qmd 	modified:   index.qmd 	modified:   notebooks-listings.qmd 	modified:   notebooks-listings.yaml 	new file:   quarto-format.qmd

--- a/notebooks-listings.yaml
+++ b/notebooks-listings.yaml
@@ -3,6 +3,7 @@
   date: "2025-01-15"
   path: "core/notebooks/notebook01_python.html"
   categories: [Python]
+  href: "[<i class='fa-solid fa-download'></i>](core/ipynb/notebook01_python.ipynb)"
 - title: "Numpy and Scipy"
   author: "Master I MIDS UParis Cité"
   date: "2025-01-15"
