--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,9 +4,9 @@ project:
     - "*.qmd"
     - "weeks/"
     - "core/notebooks/"
-    - "core/labs/"
+    - "core/ipynb/"
+    - "!core/labs/"
     - "!core/slides/"
-    - "!core/ipynb/"
     - "!core/labs-solutions/"
     - "!core/projects/"
     - "!projects-listings.qmd"
@@ -56,7 +56,7 @@ website:
         contents:
           - href: index.qmd
             text: Glimpse
-          - href: course-syllabus.qmd
+          - href: cours-syllabus.qmd
             text: Syllabus
           - href: course-team.qmd
             text: Team
@@ -64,50 +64,46 @@ website:
         contents:
           - href: computing-access.qmd
             text: "Computing resources"
-          - href: rstudio-client.qmd
-            text: "rstudio"
-          - href: posit-cloud.qmd
-            text: "Posit cloud"
           - href: jupyter.qmd
             text: "Jupyter"
           - href: quarto-format.qmd
             text: "Quarto"
-          - href: docker.qmd
+          - href: computing-docker.qmd
             text: "Docker"
       - href: slides-listings.qmd
         text: Slides
       - href: notebooks-listings.qmd
         text: Notebooks
-      - href: labs-listings.qmd
-        text: Labs
-      - href: labs-solutions-listings.qmd
-        text: Solutions  
+      # - href: labs-listings.qmd
+      #   text: Labs
+      # - href: labs-solutions-listings.qmd
+      #   text: Solutions  
       - section: "Journal"
         contents:
           - href: weeks/week-1.qmd
             text: "Week 1"
-          - href: weeks/week-2.qmd
-            text: "Week 2"
-          - href: weeks/week-3.qmd
-            text: "Week 3"
-          - href: weeks/week-4.qmd
-            text: "Week 4"
-          - href: weeks/week-5.qmd
-            text: "Week 5"
-          - href: weeks/week-6.qmd
-            text: "Week 6"
-          - href: weeks/week-7.qmd
-            text: "Week 7"
-          - href: weeks/week-8.qmd
-            text: "Week 8"
-          - href: weeks/week-9.qmd
-            text: "Week 9"
-          - href: weeks/week-10.qmd
-            text: "Week 10"
-          - href: weeks/week-11.qmd
-            text: "Week 11"
-          - href: weeks/week-12.qmd
-            text: "Week 12"
+          # - href: weeks/week-2.qmd
+          #   text: "Week 2"
+          # - href: weeks/week-3.qmd
+          #   text: "Week 3"
+          # - href: weeks/week-4.qmd
+          #   text: "Week 4"
+          # - href: weeks/week-5.qmd
+          #   text: "Week 5"
+          # - href: weeks/week-6.qmd
+          #   text: "Week 6"
+          # - href: weeks/week-7.qmd
+          #   text: "Week 7"
+          # - href: weeks/week-8.qmd
+          #   text: "Week 8"
+          # - href: weeks/week-9.qmd
+          #   text: "Week 9"
+          # - href: weeks/week-10.qmd
+          #   text: "Week 10"
+          # - href: weeks/week-11.qmd
+          #   text: "Week 11"
+          # - href: weeks/week-12.qmd
+          #   text: "Week 12"
 
 format:
   html:
