--- a/_quarto.yml
+++ b/_quarto.yml
@@ -108,8 +108,8 @@ website:
 format:
   html:
     theme:
-      dark: [slate, theme-dark.scss]
-      light: [slate, theme.scss]
+      light: [cosmo, theme.scss]
+      dark: [cosmo, theme-dark.scss]
     mainfont: "Atkinson Hyperlegible"
     code-copy: true
     code-overflow: wrap
