--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ project:
     - "!core/labs/"
     - "!core/slides/"
     - "!core/labs-solutions/"
-    - "!core/projects/"
+#    - "!core/projects/"
     - "!projects-listings.qmd"
     - "!core/technos/"
   output-dir: _site
@@ -84,10 +84,10 @@ website:
             text: "Week 1"
           - href: weeks/week-2.qmd
             text: "Week 2"
-          # - href: weeks/week-3.qmd
-          #   text: "Week 3"
-          # - href: weeks/week-4.qmd
-          #   text: "Week 4"
+          - href: weeks/week-3.qmd
+            text: "Week 3"
+          - href: weeks/week-4.qmd
+            text: "Week 4"
           # - href: weeks/week-5.qmd
           #   text: "Week 5"
           # - href: weeks/week-6.qmd
@@ -121,3 +121,4 @@ execute:
   cache: true
 
 editor: source
+lang: en-US
