--- a/_quarto.yml
+++ b/_quarto.yml
@@ -64,7 +64,9 @@ website:
         contents:
           - href: computing-access.qmd
             text: "Computing resources"
-          - href: jupyter.qmd
+          - href: computing-virtualenv.qmd
+            text: "Virtual environments"
+          - href: computing-jupyter.qmd
             text: "Jupyter"
           - href: quarto-format.qmd
             text: "Quarto"
@@ -80,18 +82,18 @@ website:
       #   text: Solutions  
       - section: "Journal"
         contents:
-          - href: weeks/week-1.qmd
-            text: "Week 1"
-          - href: weeks/week-2.qmd
-            text: "Week 2"
-          - href: weeks/week-3.qmd
-            text: "Week 3"
+          - href: weeks/week-6.qmd
+            text: "Week 6"
           - href: weeks/week-4.qmd
             text: "Week 4"
+          - href: weeks/week-3.qmd
+            text: "Week 3"
+          - href: weeks/week-2.qmd
+            text: "Week 2"
+          - href: weeks/week-1.qmd
+            text: "Week 1"
           # - href: weeks/week-5.qmd
           #   text: "Week 5"
-          # - href: weeks/week-6.qmd
-          #   text: "Week 6"
           # - href: weeks/week-7.qmd
           #   text: "Week 7"
           # - href: weeks/week-8.qmd
