--- a/_quarto.yml
+++ b/_quarto.yml
@@ -80,18 +80,20 @@ website:
       #   text: Labs
       # - href: labs-solutions-listings.qmd
       #   text: Solutions  
-      - section: "Journal"
-        contents:
-          - href: weeks/week-6.qmd
-            text: "Week 6"
-          - href: weeks/week-4.qmd
-            text: "Week 4"
-          - href: weeks/week-3.qmd
-            text: "Week 3"
-          - href: weeks/week-2.qmd
-            text: "Week 2"
-          - href: weeks/week-1.qmd
-            text: "Week 1"
+      - href: weeks-listings.qmd
+        text: Journal
+      # - section: "Journal"
+      #   contents:
+      #     - href: weeks/week-6.qmd
+      #       text: "Week 6"
+      #     - href: weeks/week-4.qmd
+      #       text: "Week 4"
+      #     - href: weeks/week-3.qmd
+      #       text: "Week 3"
+      #     - href: weeks/week-2.qmd
+      #       text: "Week 2"
+      #     - href: weeks/week-1.qmd
+      #       text: "Week 1"
           # - href: weeks/week-5.qmd
           #   text: "Week 5"
           # - href: weeks/week-7.qmd
