--- a/notebooks-listings.yaml
+++ b/notebooks-listings.yaml
@@ -42,6 +42,7 @@
   path: "core/notebooks/notebook07_json-format.html"
   date: "2025-03-07"
   categorie: [JSON, serialization]
+  href: '<a href="core/ipynb/notebook07_json-format.ipynb" download="notebook07_json-format.ipynb"> <i class="fa-solid fa-download"> </i> </a>'
 - title: "Web data"
   path: "core/notebooks/notebook08_webdata-II.html"
   date: "2025-03-14"
