modified:   .gitignore 	new file:   _freeze/core/ipynb/notebook07_json-format/execute-results/ipynb.json 	modified:   core/notebooks/notebookxx_pg_pandas_spark.qmd 	modified:   core/slides/slides06_arrow.qmd 	modified:   core/slides/slides06_file-formats.qmd 	modified:   core/slides/slides07_spark-deeper-dive.qmd 	modified:   core/slides/slides08_spark-tips.qmd 	modified:   core/slides/spark-catalyst.qmd 	modified:   quarto-format.qmd

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,10 @@ cython_debug/
 /core/slides/*_cache/
 /core/slides/*_files/
 /_site/
+/core/notebooks/.jupyter_cache/
+/core/labs/*_cache/
+/core/notebooks/.ipynb_checkpoints/
+/core/notebooks/970101f4-6bc5-4932-ad58-30477664f5ed
+
+
+/_*.local
