second version of notebook08_webdata

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
     - "*.qmd"
     - "weeks/"
     - "core/notebooks/"
-    - "core/ipynb/"
+    - "!core/ipynb/"
     - "!core/labs/"
     - "!core/slides/"
     - "!core/labs-solutions/"
