--- a/_quarto.yml
+++ b/_quarto.yml
@@ -81,7 +81,9 @@ website:
         text: Journal
 
 resources:
-  - "/resources/hmw-table-wrangling.html"      
+  - "/projects/hmw-table-wrangling.html"  
+  - "/data/drug-enforcement.json.zip"
+  - "/data/webdata.parquet.zip"    
 
 format:
   html:
