--- a/weeks-listings.yaml
+++ b/weeks-listings.yaml
@@ -1,50 +1,61 @@
 - title: "Week 1"
   author: "Master I MIDS UParis Cité"
-  date: "2025-01-17"
+  date: "2026-01-12"
   path: /weeks/week-1.html
   categories: [Big data, Python data stack]
 - title: "Week 2"
   author: "Master I MIDS UParis Cité"
-  date: "2025-01-24"
+  date: "2026-01-19"
   path: /weeks/week-2.html
-  categories: [Pandas]
+  categories: [Pandas, Polars, Arrow]
 - title: "Week 3"
   author: "Master I MIDS UParis Cité"
-  date: "2025-01-31"
+  date: "2026-01-26"
   path: /weeks/week-3.html
-  categories: [Dask]
+  categories: [Dask, Arrow]
 - title: "week 4"
   author: "Master I MIDS UParis Cité"
-  date: "2025-02-07"
+  date: "2026-02-02"
   path: /weeks/week-4.html
   categories: [Spark RDD]
+- title: "Week 5"
+  author: "Master I MIDS UParis Cité"
+  date: "2026-02-09"
+  path: /weeks/week-5.html
+  categories: [Spark SQL]
 - title: "Week 6"
   author: "Master I MIDS UParis Cité"
-  date: "2025-02-21"
+  date: "2026-02-16"
   path: /weeks/week-6.html
-  categories: [Spark SQL]
+  categories: [Json, serialization, Sparlyr, Pandas on Spark]
 - title: "Week 7"
   author: "Master I MIDS UParis Cité"
-  date: "2025-03-07"
+  date: "2026-02-23"
   path: /weeks/week-7.html
-  categories: [Json, serialization]
+  categories: [File formats, Parquet, Avro, ORC, Arrow]
 - title: "Week 8"
   author: "Master I MIDS UParis Cité"
-  date: "2025-03-14"
+  date: "2026-03-09"
   path: /weeks/week-8.html
-  categories: [File formats, Parquet, Avro, ORC]
+  categories: [Spark, Shuffle, Joins, Dependencies, Lineage graph, Catalyst]
 - title: "Week 9"
   author: "Master I MIDS UParis Cité"
-  date: "2025-03-21"
+  date: "2026-03-16"
   path: /weeks/week-9.html
-  categories: [Spark, Shuffle, Joins, Dependencies, Lineage graph, Catalyst]
+  categories: [Spark, Shuffle, Joins, Dependencies, Lineage graph, Catalyst]  
 - title: "Week 10"
   author: "Master I MIDS UParis Cité"
-  date: "2025-03-28"
+  date: "2026-03-23"
   path: /weeks/week-10.html
-  categories: [Spark, Shuffle, Joins, Dependencies, Lineage graph, Catalyst]  
+  categories: [Spark, NLP]  
 - title: "Week 11"
   author: "Master I MIDS UParis Cité"
-  date: "2025-04-03"
+  date: "2026-03-30"
   path: /weeks/week-11.html
-  categories: [Spark, Shuffle, Joins, Dependencies, Lineage graph, Catalyst]  
+  categories: [Spark, Spatial data]
+- title: "Week 12"
+  author: "Master I MIDS UParis Cité"
+  date: "2026-04-13"
+  path: /weeks/week-12.html
+  categories: [Spark, TBA]
+     
